# ExifStats

./: .gitignore  CMakeLists.txt  ExifStats.natvis  Project.Deploy.bat  Project.Setup.bat  README.md
Plugins/Heif/: QHeifHandler.cpp  QHeifHandler.h  main.cpp
Plugins/TurboJpeg/: QJpegTurboHandler.cpp  QJpegTurboHandler.h  main.cpp  turbojpeg.json
Scripts/: Build.bat  BuildDeployRun.bat  CMake.bat  CleanBuildDebugDeployOpenSln.bat  CleanBuildRun.bat  DeleteGenerated.bat  Deploy.bat  OpenQtCreator.bat  OpenSln.bat  Run.bat
Scripts/CMake/: Qt.cmake
Scripts/Doc/: StaticCompilation.txt
Scripts/Internal/: QtDeploy.bat  Setup.Qt.bat  Setup.bat
inc/: ESBarChartQuickItem.h  ESDatabase.h  ESDebugQmlBinder.h  ESExifFilter.h  ESExifFromToFilter.h  ESExifGeoLocationFilter.h  ESExifListFilter.h  ESExifOrientationFilter.h  ESExifPathFilter.h  ESExifStat.h  ESExifStatComponent.h  ESExifStatCountAperture.h  ESExifStatCountCameraModel.h  ESExifStatCountComponent.h  ESExifStatCountDateTime.h  ESExifStatCountFocalLengthIn35mm.h  ESExifStatCountIntAllValuesComponent.h  ESExifStatCountLensModel.h  ESExifStatCountOrientation.h  ESExifStatCountStepComponent.h  ESExifStatCounterComponentInterface.h  ESExifStatGeoLocation.h  ESExifStatGeoLocationComponent.h  ESExifStatListFiles.h  ESExifStatListFilesComponent.h  ESExifStatMinMaxComponent.h  ESExifTagsFilter.h  ESFileInfo.h  ESImage.h  ESImageCache.h  ESImageGridQuickItem.h  ESImageLoader.h  ESImageTagger.h  ESImageTaggerManager.h  ESImageTagsSearchEngine.h  ESLogger.h  ESMapDotsQuickItem.h  ESQmlBinder.h  ESQuadTree.h  ESSerializer.h  (+5 more)
rc/: Resources.qrc  version.rc
rc/Qml/: CounterChart.qml  CounterChartFromTo.qml  FallbackQmlErrors.qml  FilteringList.qml  RegularButton.qml  SmallButton.qml  main.qml
src/: ESBarChartQuickItem.cpp  ESDatabase.cpp  ESDebugQmlBinder.cpp  ESExifStatCountDateTime.cpp  ESExifStatCountFocalLengthIn35mm.cpp  ESExifTagsFilter.cpp  ESImage.cpp  ESImageCache.cpp  ESImageGridQuickItem.cpp  ESImageLoader.cpp  ESImageTagger.cpp  ESImageTaggerManager.cpp  ESImageTagsSearchEngine.cpp  ESLogger.cpp  ESMapDotsQuickItem.cpp  ESQmlBinder.cpp  ESQuadTree.cpp  ESStringPool.cpp  ESUtils.cpp  ESWindow.cpp  exif.cpp  main.cpp
